src/App.css
body {
  background-color: #111;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  padding-left: 1em;
  background-color: #222;
  width: 100%;
  display: flex;
  flex-direction: column;
  color: white;
  box-shadow: 4px 8px 1em black;
}

.App-main {
  color:white;
}

.App-link {
  color: #61dafb;
}

.Search {
  text-align: center;
  padding-top: 4em;
  padding-bottom: 4em;
  width: 100%;
}

.Search input {
  font-size: 1.5em;
  border-radius: 0.5em;
  padding: 0.25em;
  width: 50%;
}

@media  screen and (max-width: 450px) {
  .Search input {
    width: 75%;
  }
  
}

.Vinyl-card-list {
  display:flex;
  flex-direction: row;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
  width: 100%;

}

.Vinyl-card {
  overflow: hidden;
  box-shadow: 4px 8px 1em black;
  border-radius: 1em;
  width: 15%;
  min-width: 325px;
  margin: 1em;
  cursor: pointer;
}

.Vinyl-card img {
  width: 100%;
}

.Vinyl-modal-bg {
  position:absolute;
  top: 0;
  width:100%;
  height:100%;
  background-color: rgba(0,0,0,0.75);
  z-index: 50;
}

.Vinyl-modal-window {
  position: absolute;
  top:12%;
  border:1px solid #555;
  border-radius: 1em;
  box-shadow: 12px 12px 5em black;
  padding: 1em;
  left: 12%;
  width:75%;
  height:75%;
  background-color: black;
  z-index: 100;
}

.Vinyl-modal-window img {
  float:right;
  max-width: 600px;
  width:100%;
}

